--- a/DAB Assignment 2/DAB Assignment 2/Properties/launchSettings.json
+++ b/DAB Assignment 2/DAB Assignment 2/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "DAB Assignment 2": {
       "commandName": "Project",
-      "workingDirectory": "C:\\Users\\Premi\\Downloads\\DAB_Assignment_2\\DAB Assignment 2"
+      "workingDirectory": "C:\\Users\\mikke\\Documents\\GitHub\\DAB_Assignment_2\\DAB Assignment 2\\DAB Assignment 2"
     }
   }
 }
